--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -4,55 +4,103 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Student Portal - Campus Events</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+      body { background: #f6f8fb; }
+    </style>
   </head>
   <body>
-    <h1>Student Portal</h1>
-
-    <section>
-      <h2>Auth</h2>
-      <label>
-        Student ID:
-        <input id="student_id" placeholder="S1001" />
-      </label>
-      <span>or</span>
-      <label>
-        Email:
-        <input id="email" placeholder="alice@example.com" />
-      </label>
-      <button id="saveAuth">Save</button>
-      <p id="authStatus"></p>
-    </section>
-
-    <section>
-      <h2>Filter by College</h2>
-      <select id="collegeFilter"></select>
-      <button id="loadEvents">Load Events</button>
-    </section>
-
-    <section>
-      <h2>Events</h2>
-      <div id="events"></div>
-    </section>
-
-    <section>
-      <h2>Your Actions</h2>
-      <div>
-        <label>Event ID: <input id="actionEventId" type="number" /></label>
+    <header class="bg-white border-bottom py-3 shadow-sm">
+      <div class="container d-flex align-items-center justify-content-between">
+        <h1 class="h4 mb-0">Campus Events – Student Portal</h1>
+        <span class="text-muted small">Discover and join events</span>
       </div>
-      <div>
-        <button id="btnRegister">Register</button>
-        <button id="btnAttend">Mark Attendance</button>
-      </div>
-      <div>
-        <label>Rating (1-5): <input id="rating" type="number" min="1" max="5" /></label>
-      </div>
-      <div>
-        <label>Comment: <input id="comment" /></label>
-      </div>
-      <button id="btnFeedback">Submit Feedback</button>
-      <p id="actionResult"></p>
-    </section>
+    </header>
 
+    <main class="container py-4">
+      <div class="row g-4">
+        <div class="col-12 col-lg-6">
+          <div class="card shadow-sm">
+            <div class="card-header bg-primary text-white"><strong>Auth</strong></div>
+            <div class="card-body">
+              <div class="row g-3 align-items-end">
+                <div class="col-12 col-md-5">
+                  <label class="form-label">Student ID</label>
+                  <input id="student_id" class="form-control" placeholder="S1001" />
+                </div>
+                <div class="col-12 col-md-2 text-center">or</div>
+                <div class="col-12 col-md-5">
+                  <label class="form-label">Email</label>
+                  <input id="email" class="form-control" placeholder="alice@example.com" />
+                </div>
+                <div class="col-12 d-grid">
+                  <button id="saveAuth" class="btn btn-primary">Save</button>
+                </div>
+                <div class="col-12">
+                  <p id="authStatus" class="text-success mb-0"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-lg-6">
+          <div class="card shadow-sm">
+            <div class="card-header bg-white"><strong>Filter by College</strong></div>
+            <div class="card-body">
+              <div class="row g-3 align-items-end">
+                <div class="col-12 col-md-8">
+                  <select id="collegeFilter" class="form-select"></select>
+                </div>
+                <div class="col-12 col-md-4 d-grid">
+                  <button id="loadEvents" class="btn btn-outline-primary">Load Events</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="card shadow-sm">
+            <div class="card-header bg-white"><strong>Events</strong></div>
+            <div class="card-body">
+              <div id="events" class="row g-3"></div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="card shadow-sm">
+            <div class="card-header bg-white"><strong>Your Feedback</strong></div>
+            <div class="card-body">
+              <div class="row g-3">
+                <div class="col-12 col-md-3">
+                  <label class="form-label">Event ID</label>
+                  <input id="actionEventId" type="number" class="form-control" />
+                </div>
+                <div class="col-12 col-md-3">
+                  <label class="form-label">Rating (1-5)</label>
+                  <input id="rating" type="number" min="1" max="5" class="form-control" />
+                </div>
+                <div class="col-12 col-md-6">
+                  <label class="form-label">Comment</label>
+                  <input id="comment" class="form-control" placeholder="Optional" />
+                </div>
+                <div class="col-12 d-grid">
+                  <button id="btnFeedback" class="btn btn-primary">Submit Feedback</button>
+                </div>
+                <div class="col-12">
+                  <p id="actionResult" class="mb-0"></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="/script.js"></script>
   </body>
 </html>
+
